# doot

./: Cargo.toml  README.md
src/: main.rs  test.txt
